--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "pytest (>=8.4.1,<9.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "flake8 (>=7.3.0,<8.0.0)",
-    "sentry-sdk (>=2.34.0,<3.0.0)"
+    "sentry-sdk (>=2.34.0,<3.0.0)",
+    "pdoc (>=15.0.4,<16.0.0)"
 ]
 
 
